--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,10 @@
 body{
   height: 100vh;
-  background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+  background-image: url(./assets/teste3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
