--- a/client/src/components/Join/Join.module.css
+++ b/client/src/components/Join/Join.module.css
@@ -1,22 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Mogra&display=swap');
 
 .join-container{
-  background-color: #ffffff;
   color: #000;
-  width: 400px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   display: flex;
+  border-radius: 10%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 50px 0 50px 0;
-
+  z-index: 0;
   -webkit-box-shadow: 5px 5px 17px 1px rgba(0, 0, 0, 0.3);
 	box-shadow: 5px 5px 17px 1px rgba(0, 0, 0, 0.3);
   font-family: 'Mogra', cursive;
 }
 .join-container .title{
   padding: 1rem 0 0 0;
+}
+.join-container input {
+  font-weight: 800;
 }
 
 .join-container button {
